[project]
name = "signals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]
